syntax = "proto3";

option go_package = "protobuf/protogen/communication";

message PaperMail {
  uint32 id = 1;
  string address = 2;
  string note = 3;
}